# rtc_book

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
app/: CMakeLists.txt
app/include/app/: canvas.h  color.h  math.h  matrix.h  tuple.h  types.h
app/src/: canvas.cpp  main.cpp
app/test/: CMakeLists.txt
app/test/app/: canvas_tests.cpp  color_tests.cpp  matrix_tests.cpp  tuple_tests.cpp
cmake/: conan.cmake
